--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -120,7 +120,7 @@ html is set to 62.5% so that all the REM measurements throughout Skeleton
 are based on 10px sizing. So basically 1.5rem = 15px :) */
 html {
   font-size: 62.5%;
-background-color:#D5C0D6;}
+background-image: url('https://c.wallhere.com/photos/77/c5/3556x2000_px_Futuristic_red_Tengen_Toppa_Gurren_Lagann_vectors-533252.png!d'); background-size: cover;}
 body {
   font-size: 1.5em; /* currently ems cause chrome bug misinterpreting rems on body element */
   line-height: 1.6;
