--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -47,9 +47,7 @@
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
-    -webkit-box-shadow: 10px 10px 5px 0px rgba(255,255,255,1);
-    -moz-box-shadow: 10px 10px 5px 0px rgba(255,255,255,1);
-    box-shadow: 10px 10px 5px 0px rgba(255,255,255,1);
+    box-shadow: 0 0 20px #4f9;
 }
 
 .principal h1{
@@ -164,27 +162,22 @@
   color:white;
 }
 
-
-
-
 #content {
   text-align:center;
-  
   position:absolute;
   left:0;
   right:0;
   margin:auto;
-  padding:120px 0 10px 0;
-  
-  width:200px;
-  height:20px;
+  padding:100px 0 10px 0;
+  width:180px;
+  height:10px;
 }
 
 input[type="checkbox"]{display:none;}
 
 .checkbox:checked + .label{
   background:#C5DCFF;
-  color:blue;
+  color:black;
 }
 
 .checkbox:checked ~ .social {
@@ -193,61 +186,62 @@ input[type="checkbox"]{display:none;}
   -moz-transform:scale(1) translateY(-90px);
   -o-transform:scale(1) translateY(-90px);
   transform:scale(1) translateY(-90px);
-    -webkit-transition:.5s;
+  -webkit-transition:.5s;
   -moz-transition:.5s;
   -o-transition:.5s;
   transition:.5s;
 }
 
 .label {
-  font-size:16px;
+  font-size:12px;
   cursor:pointer;
   margin:0;
   margin-top: -50px;
-  padding:5px 5px;
-  
+  padding:10px 10px;
   border-radius:10%;
-  color:white;
+  color:black;
+  background-color: ;
 }
 
 .social {
   transform-origin:50% 0%;
-  
   -webkit-transform: scale(0) translateY(-190px);
   -moz-transform:scale(0) translateY(-190px);
   -o-transform:scale(0) translateY(-190px);
   transform:scale(0) translateY(-190px);
-  
   opacity:0;
 }
-ul {
+
+
+.social ul {
   position:relative;
   left:0;
   right:0;
   margin:auto;
   color:#fff;
-  height:46px;
+  height:38px;
   width:180px;
   background:#3B5998;
   padding:0;
   list-style:none;
 }
 
-ul li {
-  font-size:20px;
-  
+.social ul li{
+  font-size:22px;
   cursor:pointer;
   width:60px;
   margin:0;
-  padding:12px 0;
+  padding:8px 0;
   text-align:center;
   float:left;
   display:block;
-  height:22px;}
+  height:22px;
+}
 
-ul li:hover {color:rgba(0,0,0,.5);}
+.social ul li:hover {color:rgba(0,0,0,.5);
+}
 
-ul:after {
+.social ul:after {
   content:'';
   display:block;
   position:absolute;
@@ -256,15 +250,15 @@ ul:after {
   margin:35px auto;
   height:0;
   width:0;
-  
   border-left: 20px solid transparent;
-    border-right: 20px solid transparent;
-    
-    border-top: 20px solid #3B5998;
+  border-right: 20px solid transparent;
+  border-top: 20px solid #3B5998;
 }
 
-li[class*="twitter"] {background:#6CDFEA;padding:12px 0;}
+li[class*="twitter"] {background:#6CDFEA;padding:10px 0;}
 li[class*="gplus"] {background:#E34429;padding:12px 0;}
+
+
 
 
 
